tests/purs/passing/Import/M1.purs
module M1 where

id :: forall a. a -> a
id = \x -> x

foo = id
